--- a/Torpedo3/PvAI_Page.xaml
+++ b/Torpedo3/PvAI_Page.xaml
@@ -6,21 +6,25 @@
       xmlns:local="clr-namespace:Torpedo3"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PvAI_Page">
-    <StackPanel Orientation="Vertical">
+      Title="PvAI_Page"
+      >
+   
+
+    <StackPanel Orientation="Vertical" KeyDown="Page_KeyDown_1">
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="playerCanvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1"/>
+            <Canvas x:Name="playerCanvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="playerCanvas_MouseRightButtonDown"/>
             <Canvas x:Name="botCanvas" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1"/>
             <StackPanel Height="209" Width="100">
-                <TextBox Height="23" TextWrapping="Wrap" Text="Saját hajók"/>
+
                 <TextBlock x:Name ="ownShips"/>
-                <TextBox Height="23" TextWrapping="Wrap" Text="Enemy hajók"/>
+
                 <TextBlock x:Name ="enemyShips"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Canvas x:Name="botCanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1"/>
             <Canvas x:Name="playerCanvasS" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" />
+           
         </StackPanel>
         <TextBlock x:Name ="tbScore"/>
     </StackPanel>
