--- a/Torpedo3/PvP_Page.xaml
+++ b/Torpedo3/PvP_Page.xaml
@@ -7,11 +7,11 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PvP_Page">
-
+    
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="player1Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1"/>
-            <Canvas x:Name="player2Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1"/>
+            <Canvas x:Name="player1Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player1Canvas_MouseRightButtonDown"/>
+            <Canvas x:Name="player2Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player2Canvas_MouseRightButtonDown"/>
             <StackPanel Height="209" Width="100">
                 <TextBox Height="23" TextWrapping="Wrap" Text="Saját hajók"/>
                 <TextBlock x:Name ="ownShips"/>
@@ -20,9 +20,10 @@
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="player1CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1"/>
-            <Canvas x:Name="player2CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" />
+            <Canvas x:Name="player1CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player1CanvasS_MouseLeftButtonDown"/>
+            <Canvas x:Name="player2CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player2CanvasS_MouseLeftButtonDown"/>
         </StackPanel>
         <TextBlock x:Name ="tbScore"/>
     </StackPanel>
+    
 </Page>
