--- a/Torpedo3/PvAI_Page.xaml
+++ b/Torpedo3/PvAI_Page.xaml
@@ -8,23 +8,28 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PvAI_Page"
       >
-   
+
 
     <StackPanel Orientation="Vertical" KeyDown="Page_KeyDown_1">
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="playerCanvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="playerCanvas_MouseRightButtonDown"/>
-            <Canvas x:Name="botCanvas" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1"/>
+            <Canvas x:Name="playerCanvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="playerCanvas_MouseRightButtonDown" Visibility="Hidden"/>
+            <StackPanel Orientation="Vertical" x:Name="names">
+                <TextBox x:Name="player1Name"  Width="76" Height="42"/>
+                <!--TextBox x:Name="player2Name" Text="Név2" Width="76" Height="44"/-->
+                <Button x:Name="Button" Content="Play" Click="Button_Click" Width="77"></Button>
+            </StackPanel>
+            
+            <Canvas x:Name="botCanvas" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" Visibility="Hidden"/>
             <StackPanel Height="209" Width="100">
 
                 <TextBlock x:Name ="ownShips"/>
-
                 <TextBlock x:Name ="enemyShips"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="botCanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1"/>
-            <Canvas x:Name="playerCanvasS" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" />
-           
+            <Canvas x:Name="botCanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" Visibility="Hidden"/>
+            <Canvas x:Name="playerCanvasS" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" Visibility="Hidden"/>
+
         </StackPanel>
         <TextBlock x:Name ="tbScore"/>
     </StackPanel>
