--- a/Torpedo3/PvP_Page.xaml
+++ b/Torpedo3/PvP_Page.xaml
@@ -10,18 +10,21 @@
     
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="player1Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player1Canvas_MouseRightButtonDown"/>
-            <Canvas x:Name="player2Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player2Canvas_MouseRightButtonDown"/>
+            <Canvas x:Name="player1Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvas_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player1Canvas_MouseRightButtonDown" Visibility="Hidden"/>
+            <StackPanel Orientation="Vertical" x:Name="names">
+                <TextBox x:Name="player1Name"  Width="76" Height="42"/>
+                <TextBox x:Name="player2Name" Text="Név2" Width="76" Height="44"/>
+                <Button x:Name="Button" Content="Play" Click="Button_Click"  Width="77"></Button>
+            </StackPanel>
+            <Canvas x:Name="player2Canvas" Height="300" Width="300" Background="AliceBlue" MouseLeftButtonDown="playerCanvasS_MouseLeftButtonDown" Margin="1,1,1,1" MouseRightButtonDown="player2Canvas_MouseRightButtonDown" Visibility="Hidden"/>
             <StackPanel Height="209" Width="100">
-                <TextBox Height="23" TextWrapping="Wrap" Text="Saját hajók"/>
                 <TextBlock x:Name ="ownShips"/>
-                <TextBox Height="23" TextWrapping="Wrap" Text="Enemy hajók"/>
                 <TextBlock x:Name ="enemyShips"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <Canvas x:Name="player1CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player1CanvasS_MouseLeftButtonDown"/>
-            <Canvas x:Name="player2CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player2CanvasS_MouseLeftButtonDown"/>
+            <Canvas x:Name="player1CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player1CanvasS_MouseLeftButtonDown" Visibility="Hidden"/>
+            <Canvas x:Name="player2CanvasS" Height="300" Width="300" Background="AliceBlue" Margin="1,1,1,1" MouseLeftButtonDown="player2CanvasS_MouseLeftButtonDown" Visibility="Hidden"/>
         </StackPanel>
         <TextBlock x:Name ="tbScore"/>
     </StackPanel>
