--- a/Torpedo3/MainWindow.xaml
+++ b/Torpedo3/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Torpedo3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800" ResizeMode="NoResize">
+        Title="Torpedó" Height="800" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Background="AliceBlue">
-                <Button Tag="MyButton2" Click="AIPage" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Single Player"/>
-                <Button Tag="MyButton3" Click="PvP_Page" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Multi Player"/>
-                <Button Tag="MyButton4" Click="ScorePage" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Records"/>
+                <Button Tag="MyButton2" Click="AIPage" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Egyjátékos"/>
+                <Button Tag="MyButton3" Click="PvP_Page" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Többjátékos"/>
+                <Button Tag="MyButton4" Click="ScorePage" MinWidth="100" MinHeight="20" Margin="10,0,0,0" Content="Eredmények"/>
             </StackPanel>
             <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
         </StackPanel>
